apps/tessa/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tessa-frontend-service
spec:
  selector:
    app: tessa-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
